--- a/public/404.html
+++ b/public/404.html
@@ -99,6 +99,8 @@
 
 
 
+<script data-goatcounter="https://kinaetron.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
 
